--- a/research-statement-jro.tex
+++ b/research-statement-jro.tex
@@ -113,79 +113,79 @@
 \raggedright
 \singlespacing
 
-\textbf{\textit{What historical and ecological processes shape genetic
-variation both temporally and spatially, partition evolutionary lineages, and
-generate and maintain biodiversity?}} \\
-Elucidating the answers to this question is the primary motivation of my
-research program.
-To address this question, I use patterns of DNA sequence variation within and
+\textbf{\textit{What processes shape genetic variation both temporally and
+        spatially, partition evolutionary lineages, and generate and maintain
+        biodiversity?}} \\
+Elucidating answers to this question is the primary motivation of my research
+program.
+To address this question, I use patterns of genetic variation within and
 among species to identify independent evolutionary lineages (i.e., species) and
 infer their demographic histories and relationships, testing for patterns
 predicted by current ecological factors and historical events.
 To do this as robustly as possible, my research also strongly focuses on the
-development, implementation, and application of phylogenetic and
-phylogeographic models of evolution.
+development, implementation, and application of mathematical models of
+evolution and bioinformatics tools.
 
-\section*{Previous \& Current Research}
+\section*{Previous Research}
 %%%%%%%%%%%%%%%%%%%%%
-\subsection*{Diversification of Crocodiles}
-Traditionally, crocodiles (\emph{Crocodylus}) have been stereotyped as an
-ancient group of ``living fossils'' that originated in Africa prior to the
-fragmentation of Pangea; their diversity and circumtropical distribution was
-attributed to vicariance via continental drift.
-However, early molecular data and subsequent reassessment of paleontological
-data suggested the genus could be younger than previously believed.
-Recently, I collected a large multi-locus dataset of all extant crocodylian
-species and used novel statistical phylogenetic methods to infer the temporal
-and biogeographical origin of \emph{Crocodylus}.
-My results overturned traditional views of crocodiles as ``living-fossils''
-from Africa, revealing a recent and dynamic evolutionary history
-\footfullcite{Oaks2011}.
-My results strongly support that all extant crocodiles shared a common ancestor
-from the tropics of the Indo-Pacific, approximately 14--8 million years ago
-(mya), rejecting an ancient vicariant explanation of their biogeography in
-favor of a recent, dispersal-mediated model involving multiple transoceanic
-dispersals.
-It was not until after the mid-Miocene climatic optimum, when the global
-climate was cooling and fellow crocodylian lineages were suffering massive
-extinctions, that \emph{Crocodylus} radiated and dispersed around the globe.
-This finding suggests it was not only global cooling driving the extinction of
-other crocodylians, as previously believed, but also most likely competition
-with the rapidly radiating \emph{Crocodylus} lineage.
-%My results also revealed more species diversity within the \emph{Crocodylus}
-%than currently recognized.
+% \subsection*{Diversification of Crocodiles}
+% Traditionally, crocodiles (\emph{Crocodylus}) have been stereotyped as an
+% ancient group of ``living fossils'' that originated in Africa prior to the
+% fragmentation of Pangea; their diversity and circumtropical distribution was
+% attributed to vicariance via continental drift.
+% However, early molecular data and subsequent reassessment of paleontological
+% data suggested the genus could be younger than previously believed.
+% Recently, I collected a large multi-locus dataset of all extant crocodylian
+% species and used novel statistical phylogenetic methods to infer the temporal
+% and biogeographical origin of \emph{Crocodylus}.
+% My results overturned traditional views of crocodiles as ``living-fossils''
+% from Africa, revealing a recent and dynamic evolutionary history
+% \footfullcite{Oaks2011}.
+% My results strongly support that all extant crocodiles shared a common ancestor
+% from the tropics of the Indo-Pacific, approximately 14--8 million years ago
+% (mya), rejecting an ancient vicariant explanation of their biogeography in
+% favor of a recent, dispersal-mediated model involving multiple transoceanic
+% dispersals.
+% It was not until after the mid-Miocene climatic optimum, when the global
+% climate was cooling and fellow crocodylian lineages were suffering massive
+% extinctions, that \emph{Crocodylus} radiated and dispersed around the globe.
+% This finding suggests it was not only global cooling driving the extinction of
+% other crocodylians, as previously believed, but also most likely competition
+% with the rapidly radiating \emph{Crocodylus} lineage.
+% %My results also revealed more species diversity within the \emph{Crocodylus}
+% %than currently recognized.
 
-This study also introduced important methodological innovations.
-To accommodate the variation of substitution rates across DNA positions
-within and among genes, I used a novel approach of estimating the optimal model
-for partitioning the alignment into rate categories.
-The resulting model performed far better than traditional methods that
-partition the alignment based on \emph{a priori} expectations of rate variation
-\footfullcite{OaksInPrep}.
-This has important implications, because improved modeling of among-site rate
-variation will mitigate the underestimation of long branches and concomitant
-systematic error in phylogenetic estimates (e.g., long-branch attraction).
-Furthermore, the study was among the first to estimate a time-calibrated
-species tree using a multi-species coalescent model, and was the first to use a
-posterior sample of species trees to estimate ancestral-state reconstructions.
-% The species tree represents the evolutionary history of populations, rather
-% than the history of individual gene copies.
-Using a direct estimate of the species phylogeny, rather than the history of
-individual gene copies, is ideal when inferring the evolutionary patterns of
-species-level characters, like ancestral ranges.
+% This study also introduced important methodological innovations.
+% To accommodate the variation of substitution rates across DNA positions
+% within and among genes, I used a novel approach of estimating the optimal model
+% for partitioning the alignment into rate categories.
+% The resulting model performed far better than traditional methods that
+% partition the alignment based on \emph{a priori} expectations of rate variation
+% \footfullcite{OaksInPrep}.
+% This has important implications, because improved modeling of among-site rate
+% variation will mitigate the underestimation of long branches and concomitant
+% systematic error in phylogenetic estimates (e.g., long-branch attraction).
+% Furthermore, the study was among the first to estimate a time-calibrated
+% species tree using a multi-species coalescent model, and was the first to use a
+% posterior sample of species trees to estimate ancestral-state reconstructions.
+% % The species tree represents the evolutionary history of populations, rather
+% % than the history of individual gene copies.
+% Using a direct estimate of the species phylogeny, rather than the history of
+% individual gene copies, is ideal when inferring the evolutionary patterns of
+% species-level characters, like ancestral ranges.
 
 \subsection*{Climate-Driven Diversification}
-The main focus of my current research seeks to determine whether Quaternary
-climatic oscillations promoted diversification by fragmenting the distributions
-of species.
+One focus of my current research seeks to determine whether Quaternary climatic
+oscillations promoted diversification by fragmenting the distributions of
+species.
 An ideal model system for such research exists in the complex system of island
 archipelagos in Southeast Asia.
 The Southeast Asian mainland and complex system of 26,000+ islands experienced
 dramatic cyclical shifts in the extent of the terrestrial landscape during
 Quaternary glacial cycles (Figure \ref{map}).
-Many groups of islands in this region coalesced into aggregated islands during
+Many groups of islands in this region coalesced into aggregate islands during
 glacial periods when sea levels were up to 120m below current level; these
-aggregated islands where repeatedly fragmented during interglacial highstands.
+islands where repeatedly fragmented during interglacial rises in sea level.
 
 The repeated formation and fragmentation of these Pleistocene aggregate island
 complexes (PAICs) has been best characterized in the 7100+ islands of the
@@ -195,15 +195,15 @@ The PAIC model has most commonly been used to delineate areas of endemism
 across the Philippines, but has also been hypothesized to have increased the
 biodiversity of the islands by promoting speciation during island
 fragmentation.
-To test the PAIC model of diversification, collaborators and
-I have been studying the evolutionary history of two genera of geckos
-(\emph{Cyrtodactylus} and \emph{Gekko}) that are co-distributed across most of
-the islands of the
+To test whether Quaternary climatic changes promoted diversification,
+collaborators and I have been studying the evolutionary history of two genera
+of geckos (\emph{Cyrtodactylus} and \emph{Gekko}) that are co-distributed
+across most of the islands of the
 Philippines\footfullcite{Siler2010}\super{,}\footfullcite{Siler2012}.
 We found that PAIC islands did explain a significant proportion of the genetic
 diversity, but populations from PAICs were not monophyletic, and there was no
 obvious pattern of diversification associated with the Pleistocene.
-We revealed complex histories for both genera that contradict many of the the
+We revealed complex histories for both genera that contradict many of the
 traditional PAIC model predictions.
 Interestingly, for \emph{Gekko}, we found evidence that the genus colonized the
 Philippines by ``rafting'' on the Palawan Microcontinental Islands that rifted
@@ -223,7 +223,7 @@ Archipelago between 30--10 mya.
   \vspace{-1.1em}
 \end{wrapfigure}
 
-Recognizing that the shallow timescale of the PAIC cycles is not necessarily
+Recognizing the shallow timescale of the PAIC cycles is not necessarily
 conducive for traditional phylogenetic investigations, we also addressed the
 PAIC diversification hypothesis using a comparative, coalescent-based approach
 \footfullcite{Oaks2012}.
@@ -234,7 +234,7 @@ interglacial rises in sea level.
 To test this prediction, we accumulated genetic data from 22 distantly related
 pairs of populations, representing five orders of terrestrial vertebrates.
 Each pair of populations is currently on two separate islands that were
-historically connected during glacial periods.
+connected during glacial periods.
 We inferred the distribution of divergence times across the 22 pairs of
 populations using a popular approximate Bayesian computation (ABC) method
 implemented in a software package called msBayes.
@@ -243,11 +243,11 @@ We found very strong support
 for a recent, simultaneous divergence event shared by all 22 taxa.
 
 Rather than interpret this support for simultaneous divergence across the 22
-taxa as strong evidence of climate-driven diversification, I performed
+taxa as strong evidence of climate-driven diversification, we performed
 extensive simulation-based analyses to assess the ability of the msBayes method
 to detect variation in divergence times.
 The results of the simulations revealed that the method has low power and is
-biased towards inferring ``simultaneous'' divergence; I demonstrated that we
+biased towards inferring ``simultaneous'' divergence; we demonstrated that we
 were likely to have inferred simultaneous divergence even if the 22 population
 pairs had randomly diverged over the past two million years.
 This finding is important, because msBayes is a popular method, and previous
@@ -256,6 +256,22 @@ been interpreted as evidence for a shared historical event.
 Our results demonstrate that the method can be biased toward such results, and
 the interpretation of a shared event is not warranted without simulation-based
 validation of the method's performance.
+
+% Needed better method---did it
+
+\section*{Current Research}
+%%%%%%%%%%%%%%%%%%%%%
+% Full likelihood method
+
+% Apply new method to genomic data from Philippine geckonids
+
+% Apply new method to sunda shelf (Malaysia/Thailand)
+
+% Apply new method to Central Asia (rock/sand species diversification)---nat
+% geo grant
+
+% Unfunded collaborator on Adam and Matt's pending NSF proposal to apply method
+% Africa
 
 Given that we have exhausted currently available methods using moderate-sized
 datasets, I am currently using an integrative approach to better assess the
@@ -309,6 +325,9 @@ existing methods restricted to comparing pairs of taxa.
 
 \section*{Future Research}
 %%%%%%%%%%%%%%%
+
+% Extend msBayes-like model to fully phylo
+
 \subsection*{Simultaneous Estimation of Population History and Structure: A
 Novel Approach}
 Currently, the inference of species trees from multi-locus genetic data
